--- a/project/src/index.css
+++ b/project/src/index.css
@@ -12,6 +12,13 @@ code {
     monospace;
 }
 
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
